--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name = Login_Register
 server.port = 8085
 
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.datasource.url = jdbc:mysql://localhost:3306/sms?createDatabaseIfNotExist=true
 spring.datasource.username = root
